--- a/sensorhub-android-app/res/values/strings.xml
+++ b/sensorhub-android-app/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="sensor_trupulse">TruPulse Range Finder Sensor</string>
     <string name="sensor_angel">Angel Sensor</string>
     <string name="sensor_flirone">Flirone Sensor</string>
+    <string name="sensor_kromek_d3s">Kromek D3S</string>
+
     <string-array name="video_codec_list">
         <item>JPEG</item>
         <item>H264</item>
