--- a/sensorhub-android-wearos-watch/src/main/res/values/strings.xml
+++ b/sensorhub-android-wearos-watch/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Open Sensor Hub</string>
+    <string name="warning">Not connected</string>
+    <string name="heartRate">Heart Rate: </string>
+    <string name="heartRateValue">--</string>
 </resources>
