--- a/sensorhub-android-app/res/values/strings.xml
+++ b/sensorhub-android-app/res/values/strings.xml
@@ -194,8 +194,6 @@
     <string name="spot_report_track_id">Enter resource id</string>
     <string name="spot_report_track_label">Enter resource label</string>
 
-
-
     <string-array name="audio_codec_list">
         <item>AAC</item>
         <item>AMR-NB</item>
@@ -204,5 +202,34 @@
         <item>VORBIS</item>
         <item>OPUS</item>
         <item>PCM</item>
+    </string-array>
+
+    <string-array name="wearos_output">
+        <item>Heart Rate</item>
+        <item>Elevation Gain</item>
+        <item>Calories</item>
+        <item>Floors</item>
+        <item>Steps</item>
+        <item>Distance</item>
+    </string-array>
+
+    <string name="wearos_heartRate">HeartRate</string>
+    <string name="wearos_elevationGain">ElevationGain</string>
+    <string name="wearos_calories">Calories</string>
+    <string name="wearos_floors">Floors</string>
+    <string name="wearos_steps">Steps</string>
+    <string name="wearos_distance">Distance</string>
+
+    <string-array name="wearos_output_values">
+        <item>@string/wearos_heartRate</item>
+        <item>@string/wearos_elevationGain</item>
+        <item>@string/wearos_calories</item>
+        <item>@string/wearos_floors</item>
+        <item>@string/wearos_steps</item>
+        <item>@string/wearos_distance</item>
+    </string-array>
+
+    <string-array name="wearos_output_defaults">
+        <item>HeartRate</item>
     </string-array>
 </resources>
