--- a/sensorhub-android-wearos-watch/src/main/res/values/strings.xml
+++ b/sensorhub-android-wearos-watch/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="elevation">Elevation: %.2f</string>
     <string name="elevationNoPermissions">Elevation: No Perms</string>
     <string name="compassZoom">%dm</string>
+    <string name="compass">Compass</string>
 </resources>
