Add Google maps activity

--- a/sensorhub-android-wearos-watch/src/main/res/values/strings.xml
+++ b/sensorhub-android-wearos-watch/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="elevationNoPermissions">Elevation: No Perms</string>
     <string name="compassZoom">%dm</string>
     <string name="compass">Compass</string>
+    <string name="map">Map</string>
 </resources>
