--- a/sensorhub-android-app/res/values/strings.xml
+++ b/sensorhub-android-app/res/values/strings.xml
@@ -218,5 +218,17 @@
         <item>@string/controller_joystick</item>
     </string-array>
 
+    <string-array name="sleep_monitor_outputs">
+        <item>Oxygen Levels</item>
+        <item>HeartRate</item>
+    </string-array>
+
+    <string name="sleep_monitor_heartrate">HeartRate</string>
+    <string name="sleep_monitor_oxygen">Oxygen Levels</string>
+
+    <string-array name="sleep_monitor_outputs_values">
+        <item>@string/sleep_monitor_heartrate</item>
+        <item>@string/sleep_monitor_oxygen</item>
+    </string-array>
 
 </resources>
