migrated to android x added in sensor enrollment qr code, and settings. still needs work on the push requests and setting up the  configs

--- a/sensorhub-android-app/res/values/strings.xml
+++ b/sensorhub-android-app/res/values/strings.xml
@@ -10,11 +10,16 @@
     <string name="action_proxy">Start Proxy</string>
     <string name="action_stop_proxy">Stop Proxy</string>
     <string name="sos_settings">SOS Settings (Required)</string>
+
     <string name="sost_settings">SOS-T Settings (Optional)</string>
     <string name="sensor_android">Android Sensor</string>
     <string name="sensor_trupulse">TruPulse Range Finder Sensor</string>
     <string name="sensor_angel">Angel Sensor</string>
     <string name="sensor_flirone">Flirone Sensor</string>
+
+    <string name="action_enrollment">Start Sensor Enrollment</string>
+    <string name="enrollment_settings">Sensor Enrollment Settings (Required)</string>
+
     <string-array name="video_codec_list">
         <item>JPEG</item>
         <item>H264</item>
@@ -203,4 +208,7 @@
         <item>OPUS</item>
         <item>PCM</item>
     </string-array>
+
+
+
 </resources>
